@startuml
!include ../../IConfigurable.puml

abstract class ComponentConfig {
    + size : float
    + power : float
}
ComponentConfig -up-|> Configurable

note as ComponentNotes
ComponentConfig attributes are arbitrary:

Non-float attributes, such as `id` & `description`,
are excluded from `Dict()` output.

Some attributes such as `size` may have
negative attributes. Positive values of such
attributes denote generation, while negative values
denote consumption.

Although attributes are arbitrary, they are all tied
to game mechanics. Meaning no matter how versatile
the program is made, they are somehow hard-coded.
Due to this limitation, there is only a few supported
attributes. Adding new attributes will involve
changing codes.

Also, not all available components are listed in this
diagram. Please refer to source code for detail.

Following attributes and their derivatives can be
used.
size: available space for component installation,
      or (negative) used by specific component;
power: power generation or (negative) consumption;
energy: energy consumption per use, negative only;
armor: drop to zero and you're dead;
shield: the layer added on top of armor;
capacitor: maximum amount of stored energy;
end note


class ThrusterConfig {
    + maxForward
    + maxReverse
    + maxPan
    + maxTorque
}
ThrusterConfig -up-|> ComponentConfig


class HullConfig {
    + armor : float
}
HullConfig -up-|> ComponentConfig


class ShieldConfig {
    + shield : float
}
ShieldConfig -up-|> ComponentConfig


class CapacitorConfig {
    + capacitor : float
}
CapacitorConfig -up-|> ComponentConfig

@enduml